--- a/src/Templates/index.html
+++ b/src/Templates/index.html
@@ -5,8 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="<%= htmlWebpackPlugin.files.favicon %>">
 	<title><%= htmlWebpackPlugin.options.title %></title>
+	<%= htmlWebpackPlugin.tags.headTags %>
 </head>
 <body>
 	<div id="app"></div>
+	<%= htmlWebpackPlugin.tags.bodyTags %>	
 </body>
 </html>
