--- a/src/Themes/_main.scss
+++ b/src/Themes/_main.scss
@@ -13,7 +13,7 @@ html, body {
 	padding: 0;
 
 	font-family: "SFMono", sans-serif;
-	font-weight: normal;	
+	font-weight: 300;	
 	font-style: normal;
 }
 
