메인 페이지 레이아웃 작업 및 html-webpack-plugin 빌드 오류 수정

--- a/src/Themes/_main.scss
+++ b/src/Themes/_main.scss
@@ -3,7 +3,13 @@
 }
 
 @import "font";
-@import "sf-symbols.scss";
+@import "sf-symbols";
+
+@mixin grid-window {
+	display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 24px 1fr 64px;
+}
 
 html, body {
 	position: relative;
